test/Fail/QualifiedDoNoMod.agda
module QualifiedDoNoMod where

_ : Set₁
_ = Foo.do Set
